# https://peps.python.org/pep-0517/
# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "motile"
description = "Multi-Object Tracker using Integer Linear Equations"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = 'Jan Funke', email = 'funkej@janelia.hhmi.org' },
    { name = 'Talley Lambert', email = 'talley.lambert@gmail.com' },
]
dynamic = ["version"]
dependencies = ['networkx', 'ilpy', 'numpy', 'structsvm']

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff", "twine", "build"]
test = ["pytest", "pytest-cov", "plotly"]

[project.urls]
homepage = "https://github.com/funkelab/motile"

# https://hatch.pypa.io/latest/version/
[tool.hatch.version]
path = "motile/__init__.py"

# https://beta.ruff.rs/docs
[tool.ruff]
target-version = "py38"
src = ["motile"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade 
    "RUF", # ruff specific rules
]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: ${PY_MAJOR_VERSION} no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.mypy]
files = "motile"
strict = true                 # feel free to relax this if it's annoying
allow_untyped_defs = true     # TODO: can eventually fill out typing and remove this
# allow_untyped_calls = true    # TODO: can eventually fill out typing and remove this
disallow_any_generics = false
ignore_missing_imports = true
