# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# https://peps.python.org/pep-0621/
[project]
name = "motile"
description = "Multi-Object Tracker using Integer Linear Equations"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = 'Jan Funke', email = 'funkej@janelia.hhmi.org' },
    { name = 'Talley Lambert', email = 'talley.lambert@gmail.com' },
    { name = 'Caroline Malin-Mayor', email = 'malinmayorc@janelia.hhmi.org' },
    { name = 'Benjamin Gallusser', email = 'bgallusser@googlemail.com' },
    { name = 'Florian Jug', email = 'florian.jug@fht.org' },
]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "networkx>=3.0",
    "ilpy>=0.6.0",
    "numpy>=2.3.2; python_version >= '3.14'",
    "numpy>=2.1.0; python_version >= '3.13'",
    "numpy>=2.0.0",
    "structsvm>=0.2",
]

[project.optional-dependencies]
gurobi = ["ilpy[gurobi]>=0.6.0"]

[dependency-groups]
test = ["pytest>=8.4.0", "pytest-cov>=4.0"]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    "mypy>=1.10",
    "prek>=0.2",
    "ruff>=0.11",
]
docs = [
    "ipykernel>=6.20",
    "jupyter-sphinx>=0.5",
    "motile-toolbox>=0.4; python_version >= '3.10'",
    "plotly>=6.3",
    "sphinx>=7",
    "sphinx-autobuild>=2024.2",
    "sphinx-autodoc-typehints>=1.20",
    "sphinx-rtd-theme>=1.3",
    "sphinx-togglebutton>=0.3",
    "sphinxcontrib-jquery>=4.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
homepage = "https://github.com/funkelab/motile"
repository = "https://github.com/funkelab/motile"

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["motile"]
fix = true
unsafe-fixes = true
extend-exclude = ["docs/jupyter_execute", "docs/build"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
    "D",   # pydocstyle
    "TC",  # flake8-type-checking
    "TID", # flake8-tidy-imports
]
ignore = [
    "D100", # Missing docstring in public mod
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "D102", # Missing docstring in public method
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = [
    "error:::motile",
    "ignore:ilpy.*:DeprecationWarning:structsvm",
]

# https://coverage.readthedocs.io/
[tool.coverage.run]
source = ["motile"]
omit = ["motile/_types.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "motile"
strict = true
allow_untyped_defs = true     # TODO: can eventually fill out typing and remove this
disallow_any_generics = false
ignore_missing_imports = true
